--- a/Farmer/templates/Farmer/ViewHarvest.html
+++ b/Farmer/templates/Farmer/ViewHarvest.html
@@ -7,7 +7,7 @@
 <a type="button" class="btn btn-block btn-success btn-lg" href="{% url 'createPlant' %}">เพิ่ม</a>
         </div>
     <div class="col-md-1">
-        <a type="button" class="btn btn-block btn-danger btn-lg" href="{% url 'viewFarmer' %}">ย้อนกลับ</a>
+        <a type="button" class="btn btn-block btn-danger btn-lg" href="#">ย้อนกลับ</a>
     </div>
     <div class="col-md-10"></div>
 </div>
@@ -17,7 +17,7 @@
         <div class="col-md-12">
             <div class="box box-success">
                 <div class="box-header">
-                <h3 class="box-title">ตาราง ข้อมูลการเก็บเกี่ยวของเกษตรกร</h3>
+                <h3 class="box-title">ตาราง ข้อมูลการเก็บเกี่ยวของเกษตรกร ของ {{ da.Farmer_id.fruit_name }} {{ da.Farmer_id.fruit_breed }}</h3>
                 </div>
             <!-- /.box-header -->
             <div class="box-body">
@@ -26,18 +26,13 @@
                 <tr role="row">
                     <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending">จำนวนการเก็บเกียว</th>
                     <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending">ปี</th>
-                    <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">กราฟ</th>
                     <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">สถานะ</th></tr>
                 </thead>
                 <tbody>
                  <tr role="row" class="odd">
-                 <td>{{ ba.fruit_name }}</td>
-                  <td>{{ ba.fruit_breed }}</td>
-                {% for ca in ca %}
-                    <td>{{ ca.product }} กิโลกรัม</td>
-                    <td>{{ ca.years }}</td>
-                    <td>
-                  </td>
+                {% for VH in viewharvest %}
+                    <td>{{ VH.product }} กิโลกรัม</td>
+                    <td>{{ VH.years }}</td>
                   <td>
                       <a type="button"  href="{% url 'editHarvest' %}">[แก้ไข]</a>
                       <a type="button"  href="{% url 'deleteHarvest' %}">[ลบ]</a>
