--- a/Farmer/templates/Farmer/index.html
+++ b/Farmer/templates/Farmer/index.html
@@ -4,7 +4,7 @@
 <section class="content">
 <div class="row" >
     <div class="col-md-1">
-<a type="button" class="btn btn-block btn-success btn-lg" href="{% url 'createFarmer' %}">เพิ่ม</a>
+<a type="button" class="btn btn-block btn-success btn-lg" href="{% url 'createFarmer' user.id %}">เพิ่ม</a>
         </div>
     <div class="col-md-11"></div>
 </div>
@@ -29,15 +29,15 @@
                     <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">สถานะ</th></tr>
                 </thead>
                 <tbody>
-                {% for F in Farmer %}
+                {% for VF in viewFarmer %}
                 <tr role="row" class="odd">
-                  <td><a type="button"  href="{% url 'viewFarmer' F.id %}" >{{ F.name }} {{ F.lastname }}</a></td>
-                    <td>{{ F.age }}</td>
-                    <td>{{ F.address }}</td>
-                    <td>{{ F.tel }}</td>
+                  <td><a type="button"  href="{% url 'viewFarmer' VF.id %}" >{{ VF.name }} {{ VF.lastname }}</a></td>
+                    <td>{{ VF.age }}</td>
+                    <td>{{ VF.address }}</td>
+                    <td>{{ VF.tel }}</td>
                   <td>
-                      <a type="button"  href="{% url 'editFarmer' %}">[แก้ไข]</a>
-                      <a type="button"  href="{% url 'deleteFarmer' %}">[ลบ]</a>
+                      <a type="button"  href="{% url 'editFarmer' VF.id %}">[แก้ไข]</a>
+                      <a type="button"  href="{% url 'deleteFarmer' VF.id %}">[ลบ]</a>
                   </td>
                 </tr>
                 {% endfor %}
