--- a/Farmer/templates/Farmer/ViewHarvest.html
+++ b/Farmer/templates/Farmer/ViewHarvest.html
@@ -1,13 +1,14 @@
 {% extends "Farmer/base.html" %}
 {% load static %}
 {% block content %}
+
 <section class="content">
 <div class="row" >
     <div class="col-md-1">
-<a type="button" class="btn btn-block btn-success btn-lg" href="{% url 'createPlant' %}">เพิ่ม</a>
+<a type="button" class="btn btn-block btn-success btn-lg" href="{% url 'createHarvest' user.id %}">เพิ่ม</a>
         </div>
     <div class="col-md-1">
-        <a type="button" class="btn btn-block btn-danger btn-lg" href="#">ย้อนกลับ</a>
+        <a type="button" class="btn btn-block btn-danger btn-lg" href="{% url 'index'  %}">ย้อนกลับ</a>
     </div>
     <div class="col-md-10"></div>
 </div>
@@ -17,7 +18,8 @@
         <div class="col-md-12">
             <div class="box box-success">
                 <div class="box-header">
-                <h3 class="box-title">ตาราง ข้อมูลการเก็บเกี่ยวของเกษตรกร ของ {{ da.Farmer_id.fruit_name }} {{ da.Farmer_id.fruit_breed }}</h3>
+                <h3 class="box-title">ตาราง ข้อมูลการเก็บเกี่ยวของเกษตรกร </h3>
+                    {% for VH in viewharvest %}
                 </div>
             <!-- /.box-header -->
             <div class="box-body">
@@ -30,12 +32,12 @@
                 </thead>
                 <tbody>
                  <tr role="row" class="odd">
-                {% for VH in viewharvest %}
+
                     <td>{{ VH.product }} กิโลกรัม</td>
                     <td>{{ VH.years }}</td>
                   <td>
-                      <a type="button"  href="{% url 'editHarvest' %}">[แก้ไข]</a>
-                      <a type="button"  href="{% url 'deleteHarvest' %}">[ลบ]</a>
+                      <a type="button"  href="{% url 'editHarvest' VH.Plant_id_id VH.pk %}">[แก้ไข]</a>
+                      <a type="button"  href="{% url 'deleteHarvest' VH.Plant_id_id VH.pk %}">[ลบ]</a>
                   </td>
                 </tr>
                 {% endfor %}
