--- a/Farmer/templates/Farmer/CreateHarvest.html
+++ b/Farmer/templates/Farmer/CreateHarvest.html
@@ -5,10 +5,11 @@
     <br>
     <div class="row">
     <div class="col-md-1"></div>
-        <div class="col-md-10">
+        <div class="col-md-6">
     <div class="box box-success">
             <div class="box-header with-border">
-              <h3 class="box-title">เพิ่มข้อมูล เกษตรกร</h3>
+                <h1 class="box-title">เพิ่มข้อมูล ข้อมูลการเก็บเกี่ยวของ</h1><br>
+                <h2>{{ viewplant.fruit_name }}</h2> <h1 class="box-title">สายพันธุ์ :</h1> <h2>{{ viewplant.fruit_breed }}</h2>
             </div>
             <div class="box-body">
                 <div class="form-group">
@@ -26,4 +27,7 @@
             </div>
     </div>
             </div>
+            <div class="col-md-1"></div>
+                    </div>
+    </div>
 {% endblock %}
