--- a/Farmer/templates/Farmer/index.html
+++ b/Farmer/templates/Farmer/index.html
@@ -29,7 +29,7 @@
                     <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">สถานะ</th></tr>
                 </thead>
                 <tbody>
-                {% for VF in viewFarmer %}
+                {% for VF in famerpage %}
                 <tr role="row" class="odd">
                   <td><a type="button"  href="{% url 'viewFarmer' VF.id  %}" >{{ VF.name }} {{ VF.lastname }}</a></td>
                     <td>{{ VF.age }}</td>
@@ -49,15 +49,23 @@
                       <div class="col-sm-5">
                       </div>
                       <div class="col-sm-7">
-                          <div class="dataTables_paginate paging_simple_numbers" id="example2_paginate">
-                              <ul class="pagination">
-                                  <li class="paginate_button previous disabled" id="example2_previous">
-                                      <a href="#" aria-controls="example2" data-dt-idx="0" tabindex="0">Previous</a>
-                                  </li>
-                                  <li class="paginate_button active">
-                                      <a href="#" aria-controls="example2" data-dt-idx="1" tabindex="0">1</a>
-                                  </li>
-                          </div>
+                        <div class="pagination">
+                            <span class="step-links">
+        {% if famerpage.has_previous %}
+            <a href="?page=1">หน้าแรก</a>
+            <a href="?page={{ famerpage.previous_page_number }}">ก่อนหน้า</a>
+        {% endif %}
+
+        <span class="current">
+            หน้า {{ famerpage.number }} จาก {{ famerpage.paginator.num_pages }}
+        </span>
+
+        {% if famerpage.has_next %}
+            <a href="?page={{ famerpage.next_page_number }}">ถัดไป</a>
+            <a href="?page={{ famerpage.paginator.num_pages }}">สุดท้าย</a>
+        {% endif %}
+    </span>
+</div>
                       </div>
                   </div>
                 </div>
