--- a/Farmer/templates/Farmer/login.html
+++ b/Farmer/templates/Farmer/login.html
@@ -39,15 +39,24 @@
   <!-- /.login-logo -->
   <div class="login-box-body">
     <h2 class="login-box-msg">เข้าสู่ระบบ</h2>
-
-		<form action="" method="post" name="Login_Form" class="form-signin">
-			  <hr class="colorgraph"><br>
-
-			  {% csrf_token %}
-              {{ form.as_p }}
-
-			  <button class="btn btn-group-lg btn-primary middle"  name="Submit" value="Login" type="Submit">Login</button>
-		</form>
+      <form action="" method="post" name="Login_Form" class="form-signin">
+<center>
+  <div class="form-group">
+              {% csrf_token %}
+    <label for="exampleInputEmail1">ชื่อผู้ใช้</label>
+      <br>
+    {{ form.username }}
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">รหัสผ่าน</label>
+      <br>
+    {{ form.password }}
+  </div>
+  <div class="form-group form-check">
+  </div>
+  <button type="submit" class="btn btn-primary" value="Login" >เข้าสู่ระบบ</button>
+</center>
+</form>
 
   <!-- /.login-box-body -->
 </div>
