--- a/Farmer/templates/Farmer/CreateHarvest.html
+++ b/Farmer/templates/Farmer/CreateHarvest.html
@@ -8,18 +8,25 @@
         <div class="col-md-6">
     <div class="box box-success">
             <div class="box-header with-border">
-                <h1 class="box-title">เพิ่มข้อมูล ข้อมูลการเก็บเกี่ยวของ</h1><br>
-                <h2>{{ viewplant.fruit_name }}</h2> <h1 class="box-title">สายพันธุ์ :</h1> <h2>{{ viewplant.fruit_breed }}</h2>
+                <h3 class="box-title">เพิ่มข้อมูล ้อมูลการเก็บเกี่ยวของ</h3><br>
+                <h3>{{ viewplant.fruit_name }}</h3> <h3 class="box-title">สายพันธุ์ :</h3> <h3>{{ viewplant.fruit_breed }}</h3>
             </div>
             <div class="box-body">
                 <div class="form-group">
                 <form method="POST" enctype="multipart/form-data">
     <div class="form-group">
     {% csrf_token %}
-            <fieldset class="form-group">
-                {{ harvestform|crispy }}
-            </fieldset>
-
+        <div>
+            <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">ปริมาณ/กิโลกรัม</span>
+                </div>
+                {{ harvestform.product }}
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">ปี</span>
+                </div>
+                {{ harvestform.years }}
+   </br></br>
+            </div>
                 <button class="btn btn-success" type="submit">Add</button>
                 <a href="{% url 'index' %}" class="btn btn-danger" role="button">Cancel</a>
             </div>
