--- a/Farmer/templates/Farmer/ViewHarvest.html
+++ b/Farmer/templates/Farmer/ViewHarvest.html
@@ -18,7 +18,7 @@
         <div class="col-md-5">
             <div class="box box-success">
                 <div class="box-header">
-                <h3 class="box-title">ตาราง ข้อมูลการเก็บเกี่ยวของเ {{ viewplant.fruit_name }} สายพันธุ์ : {{ viewplant.fruit_breed }}</h3>
+                <h3 class="box-title">ตาราง ข้อมูลการเก็บเกี่ยวของ {{ viewplant.fruit_name }} สายพันธุ์ : {{ viewplant.fruit_breed }}</h3>
 
                 </div>
             <!-- /.box-header -->
@@ -62,18 +62,18 @@
             </div>
             </div>
         </div>
-      <div class="col-md-5">
+      <div class="col-md-7">
             <div class="box box-success">
                 <div class="box-header">
-                <h3 class="box-title">ตาราง ข้อมูลการเก็บเกี่ยวของเ {{ viewplant.fruit_name }} สายพันธุ์ : {{ viewplant.fruit_breed }}</h3>
+                <h3 class="box-title">กราฟแสดงข้อมูลการเก็บเกี่ยวของเ {{ viewplant.fruit_name }} สายพันธุ์ : {{ viewplant.fruit_breed }}</h3>
                 </div>
                 <div id="plot">
 
                     <script>
 
                         var data = [{
-                        x: [{% for VH in viewharvest %}{{ VH.years }}{% endfor %}],
-                        y: [{% for VH in viewharvest %}{{ VH.product }}{% endfor %}],
+                        x: [{% for VH in viewharvest %}{{ VH.years }},{% endfor %}],
+                        y: [{% for VH in viewharvest %}{{ VH.product }},{% endfor %}],
 
                         type: 'bar'
                         }];
